Fixed overflow scroll issue

--- a/resources/styles/backdrop.css
+++ b/resources/styles/backdrop.css
@@ -228,7 +228,7 @@
 /* Qualifications */
 .qualificationContainer {
   margin-top: 20em;
-  width: 100%;
+  width: 98%;
   height: 30em;
   position: absolute;
   z-index: 2;
